[package]
name = "cms-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum={version = "0.8.1", features = ["multipart","macros"]}
tokio = { version = "1.43.0", features = ["full"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }
mysql = "26.0.0"
md5 = "0.7.0"
serde_json = "1.0.138"
chrono = "0.4.39"
